@@ -21,7 +21,7 @@ use Siel\Acumulus\PluginConfig;
  * - (https) Communication with the Acumulus webservice using the curl library.
  * - Good error handling during communication.
  */
-class Communicator implements CommunicatorInterface
+class Communicator
 {
     /** @var \Siel\Acumulus\Config\Config */
     protected $config;
@@ -52,7 +52,12 @@ class Communicator implements CommunicatorInterface
     }
 
     /**
-     * {@inheritdoc}
+     * Returns the uri to the requested API call.
+     *
+     * @param string $apiFunction
+     *
+     * @return string
+     *   The uri to the requested API call.
      */
     public function getUri($apiFunction)
     {
@@ -62,7 +67,20 @@ class Communicator implements CommunicatorInterface
     }
 
     /**
-     * {@inheritdoc}
+     * Sends a message to the given API function and returns the results.
+     *
+     * @param string $apiFunction
+     *   The API function to invoke.
+     * @param array $message
+     *   The values to submit.
+     * @param \Siel\Acumulus\Web\Result $result
+     *   It is possible to already create a Result object before calling the Web
+     *   Service to store local messages. By passing this Result object these
+     *   local messages will be merged with any remote messages in the returned
+     *   Result object.
+     *
+     * @return \Siel\Acumulus\Web\Result
+     *   A Result object containing the results.
      */
     public function callApiFunction($apiFunction, array $message, Result $result = null)
     {
